# PersonalTelegramBot

./: .clang-tidy  .gitignore  CMakeLists.txt
cmake/: CheckCompiler.cmake  Config.cmake  GenerateProtobufs.cmake  Libraries.cmake
include/: config.h
include/certificates/: LoadCertificates.h
include/errors/: BotError.h
include/handlers/: AddTodoJsonHandler.h  DeleteTodoJsonHandler.h  EchoJsonHandler.h  GetAllTodoJsonHandler.h  JsonHandler.h  JsonValidatorHandler.h  RequestHandler.h
include/network/: ConnectionAcceptor.h  SSLConnection.h
include/todo_storage/: IdGenerator.h  TodoStorage.h
include/utils/: JsonMessage.h
include/validator/: JsonValidator.h
proto/: Todo.proto
src/: main.cc
src/certificates/: LoadCertificates.cc
src/errors/: BotError.cc
src/handlers/: AddTodoJsonHandler.cc  DeleteTodoJsonHandler.cc  EchoJsonHandler.cc  GetAllTodoJsonHandler.cc  JsonValidatorHandler.cc  RequestHandler.cc
src/network/: ConnectionAcceptor.cc  SSLConnection.cc
src/todo_storage/: TodoStorage.cc
src/utils/: JsomMessage.cc
src/validator/: JsonValidator.cc
